update taxon_id value in prep_info

--- a/notebooks/prep_sample_info.ipynb
+++ b/notebooks/prep_sample_info.ipynb
@@ -881,7 +881,7 @@
     "        'Title': np.repeat('MrOS_VitaminD', m),\n",
     "        'Anonymized_Name': samples.loc[:,'ID'].values,\n",
     "        'Scientific_Name': np.repeat('human gut metagenome', m),\n",
-    "        'Taxon_ID': np.repeat('to be added', m),\n",
+    "        'Taxon_ID': np.repeat('human', m),\n",
     "        'Description': np.repeat('to be added', m),\n",
     "        'Sample_Type': np.repeat('stool', m),\n",
     "        'Geo_Loc_Name': samples.loc[:, 'SITE'].values,\n",
@@ -1014,7 +1014,7 @@
        "      <td>MrOS_VitaminD</td>\n",
        "      <td>BI0023</td>\n",
        "      <td>human gut metagenome</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>human</td>\n",
        "      <td>to be added</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
@@ -1038,7 +1038,7 @@
        "      <td>MrOS_VitaminD</td>\n",
        "      <td>BI0056</td>\n",
        "      <td>human gut metagenome</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>human</td>\n",
        "      <td>to be added</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
@@ -1062,7 +1062,7 @@
        "      <td>MrOS_VitaminD</td>\n",
        "      <td>BI0131</td>\n",
        "      <td>human gut metagenome</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>human</td>\n",
        "      <td>to be added</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
@@ -1086,7 +1086,7 @@
        "      <td>MrOS_VitaminD</td>\n",
        "      <td>BI0153</td>\n",
        "      <td>human gut metagenome</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>human</td>\n",
        "      <td>to be added</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
@@ -1110,7 +1110,7 @@
        "      <td>MrOS_VitaminD</td>\n",
        "      <td>BI0215</td>\n",
        "      <td>human gut metagenome</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>human</td>\n",
        "      <td>to be added</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
@@ -1134,7 +1134,7 @@
        "      <td>MrOS_VitaminD</td>\n",
        "      <td>BI0353</td>\n",
        "      <td>human gut metagenome</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>human</td>\n",
        "      <td>to be added</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
@@ -1158,7 +1158,7 @@
        "      <td>MrOS_VitaminD</td>\n",
        "      <td>BI0371</td>\n",
        "      <td>human gut metagenome</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>human</td>\n",
        "      <td>to be added</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
@@ -1182,7 +1182,7 @@
        "      <td>MrOS_VitaminD</td>\n",
        "      <td>BI0372</td>\n",
        "      <td>human gut metagenome</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>human</td>\n",
        "      <td>to be added</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
@@ -1206,7 +1206,7 @@
        "      <td>MrOS_VitaminD</td>\n",
        "      <td>BI0380</td>\n",
        "      <td>human gut metagenome</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>human</td>\n",
        "      <td>to be added</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
@@ -1230,7 +1230,7 @@
        "      <td>MrOS_VitaminD</td>\n",
        "      <td>BI0389</td>\n",
        "      <td>human gut metagenome</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>human</td>\n",
        "      <td>to be added</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
@@ -1254,53 +1254,53 @@
        "</div>"
       ],
       "text/plain": [
-       "  Sample_Name          Title Anonymized_Name       Scientific_Name  \\\n",
-       "0      BI0023  MrOS_VitaminD          BI0023  human gut metagenome   \n",
-       "1      BI0056  MrOS_VitaminD          BI0056  human gut metagenome   \n",
-       "2      BI0131  MrOS_VitaminD          BI0131  human gut metagenome   \n",
-       "3      BI0153  MrOS_VitaminD          BI0153  human gut metagenome   \n",
-       "4      BI0215  MrOS_VitaminD          BI0215  human gut metagenome   \n",
-       "5      BI0353  MrOS_VitaminD          BI0353  human gut metagenome   \n",
-       "6      BI0371  MrOS_VitaminD          BI0371  human gut metagenome   \n",
-       "7      BI0372  MrOS_VitaminD          BI0372  human gut metagenome   \n",
-       "8      BI0380  MrOS_VitaminD          BI0380  human gut metagenome   \n",
-       "9      BI0389  MrOS_VitaminD          BI0389  human gut metagenome   \n",
+       "  Sample_Name          Title Anonymized_Name       Scientific_Name Taxon_ID  \\\n",
+       "0      BI0023  MrOS_VitaminD          BI0023  human gut metagenome    human   \n",
+       "1      BI0056  MrOS_VitaminD          BI0056  human gut metagenome    human   \n",
+       "2      BI0131  MrOS_VitaminD          BI0131  human gut metagenome    human   \n",
+       "3      BI0153  MrOS_VitaminD          BI0153  human gut metagenome    human   \n",
+       "4      BI0215  MrOS_VitaminD          BI0215  human gut metagenome    human   \n",
+       "5      BI0353  MrOS_VitaminD          BI0353  human gut metagenome    human   \n",
+       "6      BI0371  MrOS_VitaminD          BI0371  human gut metagenome    human   \n",
+       "7      BI0372  MrOS_VitaminD          BI0372  human gut metagenome    human   \n",
+       "8      BI0380  MrOS_VitaminD          BI0380  human gut metagenome    human   \n",
+       "9      BI0389  MrOS_VitaminD          BI0389  human gut metagenome    human   \n",
        "\n",
-       "      Taxon_ID  Description Sample_Type Geo_Loc_Name    Elevation  \\\n",
-       "0  to be added  to be added       stool   Birmingham  to be added   \n",
-       "1  to be added  to be added       stool   Birmingham  to be added   \n",
-       "2  to be added  to be added       stool   Birmingham  to be added   \n",
-       "3  to be added  to be added       stool   Birmingham  to be added   \n",
-       "4  to be added  to be added       stool   Birmingham  to be added   \n",
-       "5  to be added  to be added       stool   Birmingham  to be added   \n",
-       "6  to be added  to be added       stool   Birmingham  to be added   \n",
-       "7  to be added  to be added       stool   Birmingham  to be added   \n",
-       "8  to be added  to be added       stool   Birmingham  to be added   \n",
-       "9  to be added  to be added       stool   Birmingham  to be added   \n",
+       "   Description Sample_Type Geo_Loc_Name    Elevation    Env_Biome  \\\n",
+       "0  to be added       stool   Birmingham  to be added  urban biome   \n",
+       "1  to be added       stool   Birmingham  to be added  urban biome   \n",
+       "2  to be added       stool   Birmingham  to be added  urban biome   \n",
+       "3  to be added       stool   Birmingham  to be added  urban biome   \n",
+       "4  to be added       stool   Birmingham  to be added  urban biome   \n",
+       "5  to be added       stool   Birmingham  to be added  urban biome   \n",
+       "6  to be added       stool   Birmingham  to be added  urban biome   \n",
+       "7  to be added       stool   Birmingham  to be added  urban biome   \n",
+       "8  to be added       stool   Birmingham  to be added  urban biome   \n",
+       "9  to be added       stool   Birmingham  to be added  urban biome   \n",
        "\n",
-       "     Env_Biome     ...      OHV24D3 OHVD3 OHVD2 OHV1D2 OHV1D2CT OHVD2CT  \\\n",
-       "0  urban biome     ...         1.77  25.8   0.0    0.0   1: Yes  1: Yes   \n",
-       "1  urban biome     ...         3.91  39.2   0.0    0.0   1: Yes  1: Yes   \n",
-       "2  urban biome     ...         1.49  23.1   0.0    0.0   1: Yes  1: Yes   \n",
-       "3  urban biome     ...         2.14  27.3   0.0    0.0   1: Yes  1: Yes   \n",
-       "4  urban biome     ...         3.62    33   0.0    0.0   1: Yes  1: Yes   \n",
-       "5  urban biome     ...         1.79  19.5   0.0    0.0   1: Yes  1: Yes   \n",
-       "6  urban biome     ...         1.82  22.3   0.0    0.0   1: Yes  1: Yes   \n",
-       "7  urban biome     ...         3.37  37.2   0.7    0.0   1: Yes   0: No   \n",
-       "8  urban biome     ...         2.55  45.7   0.0    0.0   1: Yes  1: Yes   \n",
-       "9  urban biome     ...         1.93  26.7   0.0    0.0   1: Yes  1: Yes   \n",
+       "      ...      OHV24D3 OHVD3 OHVD2 OHV1D2 OHV1D2CT OHVD2CT OHVDTOT OHV1DTOT  \\\n",
+       "0     ...         1.77  25.8   0.0    0.0   1: Yes  1: Yes    25.8     39.3   \n",
+       "1     ...         3.91  39.2   0.0    0.0   1: Yes  1: Yes    39.2     61.9   \n",
+       "2     ...         1.49  23.1   0.0    0.0   1: Yes  1: Yes    23.1     52.1   \n",
+       "3     ...         2.14  27.3   0.0    0.0   1: Yes  1: Yes    27.3     43.1   \n",
+       "4     ...         3.62    33   0.0    0.0   1: Yes  1: Yes    33.0     50.2   \n",
+       "5     ...         1.79  19.5   0.0    0.0   1: Yes  1: Yes    19.5     45.5   \n",
+       "6     ...         1.82  22.3   0.0    0.0   1: Yes  1: Yes    22.3     60.0   \n",
+       "7     ...         3.37  37.2   0.7    0.0   1: Yes   0: No    37.9     53.6   \n",
+       "8     ...         2.55  45.7   0.0    0.0   1: Yes  1: Yes    45.7     50.2   \n",
+       "9     ...         1.93  26.7   0.0    0.0   1: Yes  1: Yes    26.7     49.7   \n",
        "\n",
-       "  OHVDTOT OHV1DTOT    OHSEAS     VDstatus  \n",
-       "0    25.8     39.3  3:SUMMER  sufficiency  \n",
-       "1    39.2     61.9  2:SPRING  sufficiency  \n",
-       "2    23.1     52.1  2:SPRING  sufficiency  \n",
-       "3    27.3     43.1  2:SPRING  sufficiency  \n",
-       "4    33.0     50.2    4:FALL  sufficiency  \n",
-       "5    19.5     45.5  2:SPRING   deficiency  \n",
-       "6    22.3     60.0  2:SPRING  sufficiency  \n",
-       "7    37.9     53.6  2:SPRING  sufficiency  \n",
-       "8    45.7     50.2  2:SPRING  sufficiency  \n",
-       "9    26.7     49.7  2:SPRING  sufficiency  \n",
+       "     OHSEAS     VDstatus  \n",
+       "0  3:SUMMER  sufficiency  \n",
+       "1  2:SPRING  sufficiency  \n",
+       "2  2:SPRING  sufficiency  \n",
+       "3  2:SPRING  sufficiency  \n",
+       "4    4:FALL  sufficiency  \n",
+       "5  2:SPRING   deficiency  \n",
+       "6  2:SPRING  sufficiency  \n",
+       "7  2:SPRING  sufficiency  \n",
+       "8  2:SPRING  sufficiency  \n",
+       "9  2:SPRING  sufficiency  \n",
        "\n",
        "[10 rows x 56 columns]"
       ]
