correct sample name of BIO778 to BI0778

--- a/notebooks/prep_sample_info.ipynb
+++ b/notebooks/prep_sample_info.ipynb
@@ -22,9 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "info = pd.read_csv('../data/Demultiplex_Sheet.txt', sep='\\t')"
@@ -33,9 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -139,9 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -245,9 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -267,9 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "n = info.shape[0]\n",
@@ -291,9 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -313,9 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -536,6 +522,16 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fix mismatch sample name 'BI0778' should be 'BIO778' (Nora's email on08/07/2017)\n",
+    "prep_info = prep_info.replace(to_replace='BIO778', value='BI0778')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -554,10 +550,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "samples = pd.read_csv('../data/VitDMetadata_update.csv', sep=',')"
@@ -565,10 +559,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -576,7 +568,7 @@
        "(567, 26)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,10 +579,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -794,7 +784,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,10 +795,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# reference: http://www.latlong.net/\n",
@@ -840,10 +828,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -870,10 +856,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "m = samples.shape[0]\n",
@@ -916,10 +900,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "sample_info = pd.concat([pd.DataFrame(required), samples], axis=1)\n",
@@ -936,10 +918,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -947,7 +927,7 @@
        "(567, 56)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,10 +938,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1305,7 +1283,7 @@
        "[10 rows x 56 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1316,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -1335,10 +1313,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "id_prep=list(prep_info.loc[:,'Sample_Name'].values)\n",
@@ -1347,19 +1323,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BI0778\n"
-     ]
-    }
-   ],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# samples with metadata yet no sequencing data\n",
     "for i in id_sample:\n",
@@ -1369,10 +1335,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# samples with sequencing data yet no metadata\n",
@@ -1384,17 +1348,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34\n",
-      "['BIO778', 'MN1810', 'MN1825', 'MN2006', 'MN2029', 'MN2037', 'PA3070', 'PA3486', 'PA3535', 'PA3687', 'PA3712', 'PA3720', 'PA3747', 'PA3748', 'PA3750', 'PA3779', 'PA3798', 'PA3829', 'PA3846', 'PA3858', 'PA3864', 'PA3904', 'PA3952', 'PA3963', 'PO7100', 'PO7202', 'SD8148', 'SD8188', 'SD8358', 'SD8482', 'SD8786', 'SD8791', 'SD8801', 'SD8942']\n"
+      "33\n",
+      "['MN1810', 'MN1825', 'MN2006', 'MN2029', 'MN2037', 'PA3070', 'PA3486', 'PA3535', 'PA3687', 'PA3712', 'PA3720', 'PA3747', 'PA3748', 'PA3750', 'PA3779', 'PA3798', 'PA3829', 'PA3846', 'PA3858', 'PA3864', 'PA3904', 'PA3952', 'PA3963', 'PO7100', 'PO7202', 'SD8148', 'SD8188', 'SD8358', 'SD8482', 'SD8786', 'SD8791', 'SD8801', 'SD8942']\n"
      ]
     }
    ],
