change all missing values to be Not applicable

--- a/notebooks/prep_sample_info.ipynb
+++ b/notebooks/prep_sample_info.ipynb
@@ -137,7 +137,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "info = info.drop_duplicates(subset=['#SampleID', 'ReversePrimer'])\n",
@@ -888,24 +890,24 @@
     "        'Anonymized_Name': samples.loc[:,'ID'].values,\n",
     "        'Scientific_Name': np.repeat('human gut metagenome', m),\n",
     "        'Taxon_ID': np.repeat('human', m),\n",
-    "        'Description': np.repeat('to be added', m),\n",
+    "        'Description': np.repeat('Not applicable', m),\n",
     "        'Sample_Type': np.repeat('stool', m),\n",
     "        'Geo_Loc_Name': samples.loc[:, 'SITE'].values,\n",
-    "        'Elevation': np.repeat('to be added', m),\n",
+    "        'Elevation': np.repeat('Not applicable', m),\n",
     "        'Env_Biome': np.repeat('urban biome', m),\n",
     "        'Env_Feature': np.repeat('human-associated habitat', m),\n",
     "        'Env_Material': np.repeat('feces', m),\n",
     "        'Env_Package': np.repeat('human-gut', m),\n",
     "        'Latitude': Latitude,\n",
     "        'Longitude': Longitude,\n",
-    "        'Collection_Timestamp': np.repeat('to be added', m),\n",
-    "        'DNA_Extracted': np.repeat('to be added', m),\n",
-    "        'Physical_Specimen_Location': np.repeat('to be added', m),\n",
-    "        'Physical_Specimen_Remaining': np.repeat('to be added', m),\n",
+    "        'Collection_Timestamp': np.repeat('Not applicable', m),\n",
+    "        'DNA_Extracted': np.repeat('Not applicable', m),\n",
+    "        'Physical_Specimen_Location': np.repeat('Not applicable', m),\n",
+    "        'Physical_Specimen_Remaining': np.repeat('Not applicable', m),\n",
     "        'Age': samples.loc[:,'V4AGE1'].values,\n",
     "        'Age_Units': np.repeat('years', m),\n",
-    "        'Host_Subject_ID': np.repeat('to be added', m),\n",
-    "        'Host_Taxid': np.repeat('to be added', m),\n",
+    "        'Host_Subject_ID': np.repeat('Not applicable', m),\n",
+    "        'Host_Taxid': np.repeat('Not applicable', m),\n",
     "        'Host_Scientific_Name': np.repeat('Homo sapiens', m),\n",
     "        'Host_Common_Name': np.repeat('human', m),\n",
     "        'Life_Stage': np.repeat('adult', m),\n",
@@ -1017,10 +1019,10 @@
        "      <td>BI0023</td>\n",
        "      <td>human gut metagenome</td>\n",
        "      <td>human</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>urban biome</td>\n",
        "      <td>...</td>\n",
        "      <td>1.77</td>\n",
@@ -1041,10 +1043,10 @@
        "      <td>BI0056</td>\n",
        "      <td>human gut metagenome</td>\n",
        "      <td>human</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>urban biome</td>\n",
        "      <td>...</td>\n",
        "      <td>3.91</td>\n",
@@ -1065,10 +1067,10 @@
        "      <td>BI0131</td>\n",
        "      <td>human gut metagenome</td>\n",
        "      <td>human</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>urban biome</td>\n",
        "      <td>...</td>\n",
        "      <td>1.49</td>\n",
@@ -1089,10 +1091,10 @@
        "      <td>BI0153</td>\n",
        "      <td>human gut metagenome</td>\n",
        "      <td>human</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>urban biome</td>\n",
        "      <td>...</td>\n",
        "      <td>2.14</td>\n",
@@ -1113,10 +1115,10 @@
        "      <td>BI0215</td>\n",
        "      <td>human gut metagenome</td>\n",
        "      <td>human</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>urban biome</td>\n",
        "      <td>...</td>\n",
        "      <td>3.62</td>\n",
@@ -1137,10 +1139,10 @@
        "      <td>BI0353</td>\n",
        "      <td>human gut metagenome</td>\n",
        "      <td>human</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>urban biome</td>\n",
        "      <td>...</td>\n",
        "      <td>1.79</td>\n",
@@ -1161,10 +1163,10 @@
        "      <td>BI0371</td>\n",
        "      <td>human gut metagenome</td>\n",
        "      <td>human</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>urban biome</td>\n",
        "      <td>...</td>\n",
        "      <td>1.82</td>\n",
@@ -1185,10 +1187,10 @@
        "      <td>BI0372</td>\n",
        "      <td>human gut metagenome</td>\n",
        "      <td>human</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>urban biome</td>\n",
        "      <td>...</td>\n",
        "      <td>3.37</td>\n",
@@ -1209,10 +1211,10 @@
        "      <td>BI0380</td>\n",
        "      <td>human gut metagenome</td>\n",
        "      <td>human</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>urban biome</td>\n",
        "      <td>...</td>\n",
        "      <td>2.55</td>\n",
@@ -1233,10 +1235,10 @@
        "      <td>BI0389</td>\n",
        "      <td>human gut metagenome</td>\n",
        "      <td>human</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>stool</td>\n",
        "      <td>Birmingham</td>\n",
-       "      <td>to be added</td>\n",
+       "      <td>Not applicable</td>\n",
        "      <td>urban biome</td>\n",
        "      <td>...</td>\n",
        "      <td>1.93</td>\n",
@@ -1268,17 +1270,17 @@
        "8      BI0380  MrOS_VitaminD          BI0380  human gut metagenome    human   \n",
        "9      BI0389  MrOS_VitaminD          BI0389  human gut metagenome    human   \n",
        "\n",
-       "   Description Sample_Type Geo_Loc_Name    Elevation    Env_Biome  \\\n",
-       "0  to be added       stool   Birmingham  to be added  urban biome   \n",
-       "1  to be added       stool   Birmingham  to be added  urban biome   \n",
-       "2  to be added       stool   Birmingham  to be added  urban biome   \n",
-       "3  to be added       stool   Birmingham  to be added  urban biome   \n",
-       "4  to be added       stool   Birmingham  to be added  urban biome   \n",
-       "5  to be added       stool   Birmingham  to be added  urban biome   \n",
-       "6  to be added       stool   Birmingham  to be added  urban biome   \n",
-       "7  to be added       stool   Birmingham  to be added  urban biome   \n",
-       "8  to be added       stool   Birmingham  to be added  urban biome   \n",
-       "9  to be added       stool   Birmingham  to be added  urban biome   \n",
+       "      Description Sample_Type Geo_Loc_Name       Elevation    Env_Biome  \\\n",
+       "0  Not applicable       stool   Birmingham  Not applicable  urban biome   \n",
+       "1  Not applicable       stool   Birmingham  Not applicable  urban biome   \n",
+       "2  Not applicable       stool   Birmingham  Not applicable  urban biome   \n",
+       "3  Not applicable       stool   Birmingham  Not applicable  urban biome   \n",
+       "4  Not applicable       stool   Birmingham  Not applicable  urban biome   \n",
+       "5  Not applicable       stool   Birmingham  Not applicable  urban biome   \n",
+       "6  Not applicable       stool   Birmingham  Not applicable  urban biome   \n",
+       "7  Not applicable       stool   Birmingham  Not applicable  urban biome   \n",
+       "8  Not applicable       stool   Birmingham  Not applicable  urban biome   \n",
+       "9  Not applicable       stool   Birmingham  Not applicable  urban biome   \n",
        "\n",
        "      ...      OHV24D3 OHVD3 OHVD2 OHV1D2 OHV1D2CT OHVD2CT OHVDTOT OHV1DTOT  \\\n",
        "0     ...         1.77  25.8   0.0    0.0   1: Yes  1: Yes    25.8     39.3   \n",
