change taxon_id values to be missing

--- a/notebooks/prep_sample_info.ipynb
+++ b/notebooks/prep_sample_info.ipynb
@@ -889,7 +889,7 @@
     "        'Title': np.repeat('MrOS_VitaminD', m),\n",
     "        'Anonymized_Name': samples.loc[:,'ID'].values,\n",
     "        'Scientific_Name': np.repeat('human gut metagenome', m),\n",
-    "        'Taxon_ID': np.repeat('human', m),\n",
+    "        'Taxon_ID': np.repeat('Not applicable', m),\n",
     "        'Description': np.repeat('Not applicable', m),\n",
     "        'Sample_Type': np.repeat('stool', m),\n",
     "        'Geo_Loc_Name': samples.loc[:, 'SITE'].values,\n",
