create Qiime mapping file

--- a/notebooks/Qiime_bash_commands.ipynb
+++ b/notebooks/Qiime_bash_commands.ipynb
@@ -24,19 +24,10 @@
    "source": [
     "qiime demux emp-paired \\\n",
     "  --i-seqs paired-end-sequences.qza \\\n",
-    "  --m-barcodes-file unduplicated.txt \\\n",
+    "  --m-barcodes-file mapping_MrOS.txt \\ \n",
     "  --m-barcodes-category BarcodeSequence \\\n",
     "  --o-per-sample-sequences demux.qza"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
